# pyredcap

./: .pylintrc  LICENSE  README.md  outlier_etl.py  setup.cfg
.github/workflows/: ci.yml  pylint.yml
pyredcap/: __init__.py  data_cleaning.py  outliers.py  preprocessing.py  redcap_project.py
pyredcap/handlers/: api_handler.py  metadata_handler.py  transformer_handler.py
src/handlers/: api_handler.py  metadata_handler.py  mongodb_handler.py  transformer_handler.py
tests/integration/: custom_rules.py  test_outlier_etl.py
tests/integration/data/: data_cleaning.yaml  preprocessing.yaml
