[metadata]
name = pyredcap
version = 0.0.1
description = Python REDCap tools to improve analytics and data management
long_description = file: README.md
long_description_content_type = text/markdown
author = João Baiochi
author_email = jao.baiochi@gmail.com
license = MIT
url = https://github.com/RARAS-BR/pyredcap
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir=
    pyredcap=pyredcap
packages = find:
install_requires =
    numpy >= 1.26.4
    pandas >= 2.2.0
    pylint >= 3.0.3
    pymongo >= 4.6.3
    pytest >= 8.2.2
    python-dotenv >= 1.0.0
    pyyaml >= 6.0.1
    requests >= 2.31.0
    setuptools >= 68.2.0
    wheel >= 0.41.2
python_requires = >=3.10